# oxidedb

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  run_benchmarks.sh
benches/: aggregate_benchmark.rs  find_benchmark.rs  insert_benchmark.rs
docs/: performance-plan.md  pipeline-mapping.md  plan.md  shadow.md
scripts/: check-clippy.sh  check-format.sh
src/: config.rs  error.rs  lib.rs  main.rs  namespace.rs  scram.rs  server.rs  session.rs  shadow.rs  store.rs  tls.rs  translate.rs
tests/: aggregate_count_empty_e2e.rs  aggregate_count_large_e2e.rs  aggregate_geo_near_order_e2e.rs  aggregate_geo_near_query_e2e.rs  aggregate_let_vars_e2e.rs  collation_partial_index_e2e.rs  create_indexes.rs  create_indexes_compound.rs  deterministic_sampling_test.rs  find_elem_match.rs  find_filters.rs  find_nested_arrays.rs  find_query_ops_e2e.rs  find_sort_numeric.rs  find_sort_projection.rs  geo_near_simple.rs  geospatial_e2e.rs  projection_nested.rs  server_aggregate_addfields_e2e.rs  server_aggregate_bucket_e2e.rs  server_aggregate_concat_e2e.rs  server_aggregate_concatarrays_tonum_e2e.rs  server_aggregate_count_e2e.rs  server_aggregate_facet_e2e.rs  server_aggregate_group_e2e.rs  server_aggregate_lookup_e2e.rs  server_aggregate_match_e2e.rs  server_aggregate_multistage_e2e.rs  server_aggregate_project_expr_e2e.rs  server_aggregate_sample_e2e.rs  server_aggregate_skip_e2e.rs  server_aggregate_tostring_ifnull_e2e.rs  server_aggregate_unionwith_e2e.rs  server_aggregate_unwind_e2e.rs  server_aggregate_unwind_index_e2e.rs  server_aggregate_unwind_preserve_e2e.rs  (+19 more)
(+61 files in other folders)
