[package]
name = "oxidedb"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bson = "2.10"
bytes = "1.6"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.39", features = ["full"] }
rand = "0.8"
